--- a/back-end/src/main/resources/application.yml
+++ b/back-end/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
           google:
             client-id: ${google_client_id}
             client-secret: ${google_client_secret}
-            scope: openid, profile, email
+            scope: profile, email
           github:
             client-id: ${github_client_id}
             client-secret: ${github_client_secret}
