--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blocknote/core": "^0.44.0",
+    "@blocknote/mantine": "^0.44.0",
+    "@blocknote/react": "^0.44.0",
+    "@mantine/core": "^8.3.9",
+    "@mantine/hooks": "^8.3.9",
+    "@mantine/utils": "^6.0.22",
     "@tailwindcss/vite": "^4.1.13",
     "@tiptap/pm": "^3.5.0",
     "@tiptap/react": "^3.5.0",
