revised front-end UI design to ensure consistency, fixed Google avatar loading with referrer policy

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,23 @@
 .idea/
 *.iml
 
-# Logs
-*.log
+# VS Code
+.vscode/*
+!.vscode/extensions.json
 
 # Maven
 target/
 build/
 
+# Node.js
+node_modules/
+dist/
+
+# Logs
+*.log
+
 # Environment variables
 .env
+
+# Claude Code
+CLAUDE.md
